--- a/firo-embedded/pom.xml
+++ b/firo-embedded/pom.xml
@@ -16,6 +16,7 @@
     <name>firo-embedded</name>
 
     <properties>
+        <h2.version>1.4.200</h2.version>
         <servlet-api.version>3.1.0</servlet-api.version>
     </properties>
 
@@ -72,6 +73,18 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
         </dependency>
 
         <!--        <dependency>-->
