--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>2.2.7.RELEASE</version>
+        <relativePath />
+    </parent>
+
     <groupId>com.unvus.firo</groupId>
     <artifactId>firo-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
