--- a/firo-embedded/pom.xml
+++ b/firo-embedded/pom.xml
@@ -181,6 +181,7 @@
             <artifactId>querydsl-sql-spring</artifactId>
             <version>${querydsl.version}</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -210,6 +211,11 @@
                             <groupId>com.querydsl</groupId>
                             <artifactId>querydsl-apt</artifactId>
                             <version>${querydsl.version}</version>
+                        </path>
+                        <path>
+                            <groupId>javax.persistence</groupId>
+                            <artifactId>javax.persistence-api</artifactId>
+                            <version>2.2</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
