--- a/firo-embedded/pom.xml
+++ b/firo-embedded/pom.xml
@@ -203,6 +203,11 @@
                     </annotationProcessors>
                     <annotationProcessorPaths>
                         <path>
+                            <groupId>org.springframework.boot</groupId>
+                            <artifactId>spring-boot-starter-data-jpa</artifactId>
+                            <version>${spring-boot.version}</version>
+                        </path>
+                        <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>1.18.2</version>
