--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <lombok.version>1.18.2</lombok.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
         <unvus.version>1.3.0-SNAPSHOT</unvus.version>
     </properties>
 
