--- a/firo-embedded/pom.xml
+++ b/firo-embedded/pom.xml
@@ -6,12 +6,11 @@
     <parent>
         <groupId>com.unvus.firo</groupId>
         <artifactId>firo-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1-juvis-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>firo-embedded</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>firo-embedded</name>
 
