--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.unvus.firo</groupId>
     <artifactId>firo-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-juvis-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>firo - parent pom</name>
 
