--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
-        <unvus.version>1.3.0-SNAPSHOT</unvus.version>
+        <unvus.version>1.4.0-juvis-SNAPSHOT</unvus.version>
     </properties>
 
     <dependencyManagement>
