의존성 에러 수정

--- a/firo-core/pom.xml
+++ b/firo-core/pom.xml
@@ -51,6 +51,7 @@
             <groupId>com.drewnoakes</groupId>
             <artifactId>metadata-extractor</artifactId>
             <version>${metadata-extractor.version}</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
