--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,5 +21,5 @@ stages:
 deploy-unvus:
   stage: deploy
   script:
-    - mvn clean deploy -B -e -Dmaven.test.skip=true -Pwylie
+    - mvn clean deploy -B -e -Dmaven.test.skip=true
 
