--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.unvus.firo</groupId>
     <artifactId>firo</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.4-bebecook-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>firo</name>
 
