--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.2.7.RELEASE</version>
+        <version>2.6.4</version>
         <relativePath />
     </parent>
 
@@ -29,21 +29,16 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <lombok.version>1.18.18</lombok.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <spring-boot.version>2.2.7.RELEASE</spring-boot.version>
-        <unvus.version>1.5.0-SNAPSHOT</unvus.version>
+        <spring-boot.version>2.6.4</spring-boot.version>
+        <unvus.version>1.5.1-SNAPSHOT</unvus.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-io.version>2.5</commons-io.version>
-        <commons-net.version>3.6</commons-net.version>
+        <commons-net.version>3.8.0</commons-net.version>
         <h2.version>1.4.200</h2.version>
-        <metadata-extractor.version>2.14.0</metadata-extractor.version>
-        <querydsl.version>4.3.1</querydsl.version>
-        <servlet-api.version>3.1.0</servlet-api.version>
+        <metadata-extractor.version>2.17.0</metadata-extractor.version>
         <slf4j.version>1.7.30</slf4j.version>
-        <tika.version>1.24.1</tika.version>
     </properties>
 
     <repositories>
@@ -79,7 +74,7 @@
             <dependency>
                 <groupId>com.amazonaws</groupId>
                 <artifactId>aws-java-sdk-bom</artifactId>
-                <version>1.11.991</version>
+                <version>1.12.205</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -108,7 +103,6 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>${tika.version}</version>
         </dependency>
 
         <dependency>
@@ -127,7 +121,6 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
         </dependency>
 
         <dependency>
@@ -202,7 +195,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -220,7 +212,6 @@
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
-            <version>${querydsl.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.code.findbugs</groupId>
@@ -230,21 +221,24 @@
             <scope>provided</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
-            <version>${querydsl.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-sql-spring</artifactId>
-            <version>${querydsl.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet.jsp</groupId>
@@ -279,7 +273,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.18</version>
+                            <version>1.18.22</version>
                         </path>
                         <path>
                             <groupId>com.querydsl</groupId>
