--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <version>0.0.4-bebecook-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>firo</name>
+    <url>https://unvus.com/</url>
+    <description>UnvUS file upload library</description>
 
     <licenses>
         <license>
